fixed overflow issue on x axis

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -33,8 +33,8 @@
   left: 50% 
 
 .organization-logo-container
-  position: relative
-  margin-left: -150px
+  
+  text-align: center
   left: 50%
 
 .visitor-ui-home-icon
